Fix for WFCORE-7019, Delay the construction of shaded jars at provisioning time